--- a/Compiler/q1.md
+++ b/Compiler/q1.md
@@ -1,6 +1,6 @@
-## 为什么用户程序中未初始化的全局/静态变量要使用COMMON块？
+## 为什么目标文件中未初始化的全局/静态变量要使用COMMON块？
 
-首先需要明确的是什么是COMMON块。在目标文件中，编译器会将未初始化的全局/静态变量放到CoMMON块里面去。
+首先需要明确的是什么是COMMON块。在目标文件中，编译器会将未初始化的全局/静态变量放到COMMON块里面去。
 
 
 
