--- a/OperatingSystem/q4.md
+++ b/OperatingSystem/q4.md
@@ -27,7 +27,7 @@ ld -static -e  _main test.o
 [1]    15456 segmentation fault  ./a.out
 ```
 
-按照jyy说的，那肯定得上gdb了，我们用`starti`指令，确实一开始就进入到了main函数里面去，但是main函数的最后一句是一个`ret`指令，学过汇编语言的人都知道，在x86体系结构里面，`ret`会弹出栈顶元素同时挑战到该位置。那么因为没有函数调用过`main`函数，那么肯定会发生错误，所以在程序装载的时候，操作系统肯定是加入了其他的代码来跳转到 `main`函数的执行的，加入的这些代码负责准备好`main`函数执行所需要的环境，包括堆、I/O、线程、全局变量构造，通过正常的代码，以`glibc`为例，我们可以发现`glibc`程序的入口叫做`_start`,我们可以看到核心代码是
+按照jyy说的，那肯定得上gdb了，我们用`starti`指令，确实一开始就进入到了main函数里面去，但是main函数的最后一句是一个`ret`指令，学过汇编语言的人都知道，在x86体系结构里面，`ret`会弹出栈顶元素同时跳转到该位置。那么因为没有函数调用过`main`函数，那么肯定会发生错误，所以在程序装载的时候，操作系统肯定是加入了其他的代码来跳转到 `main`函数的执行的，加入的这些代码负责准备好`main`函数执行所需要的环境，包括堆、I/O、线程、全局变量构造，通过正常的代码，以`glibc`为例，我们可以发现`glibc`程序的入口叫做`_start`,我们可以看到核心代码是
 
 
 ```asm
