add sth to os/q1

--- a/OperatingSystem/q1.md
+++ b/OperatingSystem/q1.md
@@ -31,7 +31,7 @@
 
 综上，根据以上的讨论，处于以下几种情景时，我认为手动内存管理是非常必要的：
 
-操作系统与系统应用的开发，包括垃圾回收器的开发
+* 操作系统与系统应用的开发，包括垃圾回收器的开发
 * 嵌入式和低性能设备的开发
 * 要求系统具备实时性的应用场景
 * 高度要求性能的应用场景
